# beegui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml
.github/workflows/: docs.yml
docs/book/: book.toml
docs/book/src/: SUMMARY.md  bee-log.md  config.md  faq.md  install.md  intro.md  keymap.md  launching.md  once.md  palette.md  screens.md  supervisor.md
docs/screenshots/: README.md
src/: alerts.rs  bee_log.rs  main.rs  once.rs  palette.rs
src/screens/: api_health.rs  feed_timeline.rs  fleet.rs  health.rs  lottery.rs  manifest.rs  mod.rs  network.rs  peers.rs  pins.rs  pubsub.rs  stamps.rs  swap.rs  tags.rs  warmup.rs  watchlist.rs
