[package]
name = "beegui"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Desktop GUI cockpit for Ethereum Swarm Bee node operators. Sibling of bee-tui — same cockpit logic via bee-cockpit-core, rendered with egui."
authors = ["Calin Martinconi <martinconic@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ethswarm-tools/beegui"
readme = "README.md"
keywords = ["swarm", "bee", "ethereum", "gui", "egui"]
categories = ["gui"]

[dependencies]
bee-cockpit-core = "0.1"
bee-rs = "1.6"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
eframe = "0.29"
egui = "0.29"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync"] }
tokio-util = "0.7"

[[bin]]
name = "beegui"
path = "src/main.rs"
